Overflow has fixed

--- a/src/Styles/base/layout.css
+++ b/src/Styles/base/layout.css
@@ -2,6 +2,7 @@
 
 body {
   margin: o;
+  padding: 0;
   overflow-x: hidden;
 }
 
