--- a/src/Styles/components/about.css
+++ b/src/Styles/components/about.css
@@ -14,9 +14,12 @@
 }
 
 .myimg {
-    height: 240px;
-    width: 280px;
+    padding-top:0;
+    margin-top: 0;
+    height: 70%;
+    width: 70%;
     border-radius: 100%;
+    
 }
 
 .about-content{
@@ -26,7 +29,8 @@
 @media screen and (max-width: 600px){
     .about-content{
         display:flex;
-        flex-direction: column;
+        overflow: hidden;
+        flex-direction: column;    
 
         flex-wrap: wrap;
     }
