--- a/src/Styles/components/footer.css
+++ b/src/Styles/components/footer.css
@@ -31,6 +31,8 @@
         justify-content: center;
         justify-items: center;
         align-items: center;
+        overflow-x: hidden;
+
     }
 }
 .footerEnd{
