--- a/src/Styles/components/projects.css
+++ b/src/Styles/components/projects.css
@@ -36,6 +36,8 @@
         justify-content: center;
         justify-items: center;
         align-items: center;
+        overflow: hidden;
+
     }
 
     .project-list{
