--- a/src/Styles/components/tech.css
+++ b/src/Styles/components/tech.css
@@ -31,6 +31,8 @@
         justify-content: center;
         justify-items: center;
         align-items: center;
+        overflow: hidden;
+
     }
     .tech-list{
         margin: 1rem;
